--- a/View/vOutgoing.xaml
+++ b/View/vOutgoing.xaml
@@ -14,8 +14,9 @@
             Content="OUTGOING"
             Foreground="#008080"
             FontSize="55" Margin="2,0,706,776"/>
-        <Label          
-            Foreground="#008080"
+        <Label        
+            Background="#ef7065"
+            Foreground="White"
             FontWeight="Bold"
             Content="FOR SIGNATURE"
             Margin="0,113,698,709"
@@ -24,6 +25,7 @@
             Width="Auto"
             HorizontalContentAlignment="Center"/>
         <Label
+            Background="#b3cc3a"
             Foreground="#008080"
             Content="SIGNED"
             FontWeight="Bold"
@@ -32,8 +34,9 @@
             Height="Auto"
             Width="Auto"
             HorizontalContentAlignment="Center"/>
-        <Label            
-            Foreground="#008080"
+        <Label  
+            Background="#0a4054"
+            Foreground="White"
             FontWeight="Bold"
             Content="RELEASED"
             Margin="688,113,10,709"
@@ -42,175 +45,223 @@
             Width="Auto"
             HorizontalContentAlignment="Center"/>
 
-        <ListView             
+        <Grid             
+            Margin="0,152,698,10"
+            Background="#ef7065">
+            <ListView             
             BorderThickness="10"
-            Name="lvForSign"
-            Margin="0,152,698,10">
-            <ListView.View>
-                <GridView>
-                    <GridView.ColumnHeaderContainerStyle>
-                        <Style TargetType="GridViewColumnHeader">
-                            <Setter Property="Foreground" Value="#008080"></Setter>
-                            <Setter Property="FontWeight" Value="Bold"></Setter>
-                            <Setter Property="Width" Value="230"></Setter>
-                            <Setter Property="HorizontalAlignment" Value="Center"/>
-                        </Style>
-                    </GridView.ColumnHeaderContainerStyle>
-                    <!--<GridViewColumn                       
-                        DisplayMemberBinding="{Binding DocType}"
-                        Header="Type" />-->
-                    <GridViewColumn                       
+                Width="1000"
+            Name="lvForSign">
+                <ListView.View>
+                    <GridView>
+                        <GridView.ColumnHeaderContainerStyle>
+                            <Style TargetType="GridViewColumnHeader">
+                                <Setter Property="Foreground" Value="#008080"></Setter>
+                                <Setter Property="FontWeight" Value="Bold"></Setter>
+                                <Setter Property="Width" Value="230"></Setter>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                                
+                            </Style>
+                        </GridView.ColumnHeaderContainerStyle>
+                        <GridViewColumn                       
                        Width="230"                        
                        Header="SUBJECT">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
                                     Padding="-1"
-                                    Margin="8"
+                                    Margin="11"
                                     Height="30"
                                     TextWrapping="Wrap"                                 
                                     Width="220"        
                                     x:Name="txt"                                    
-                                    Text="{Binding Path=OperatingUnit}" 
-                                    Foreground="#EC4D37">
-                                </TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn   
-                        Width="150"                         
-                        Header="DATE          ">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock 
-                                    Margin="8"                               
-                                    Width="70"        
+                                    Text="{Binding Path=DocSubject}" 
+                                    Foreground="White">
+                                    </TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn   
+                        Width="180"                         
+                        Header="DATE                 ">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock 
+                                    Margin="11"                               
+                                    Width="100"        
                                     x:Name="txt"   
-                                    TextAlignment="Center"                                        
-                                    Text="{Binding Email}" 
-                                    Foreground="#EC4D37"></TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-            <!--<ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalAlignment" Value="Right"/>
-                    
-                </Style>
-            </ListView.ItemContainerStyle>-->
-        </ListView>
+                                    TextWrapping="Wrap"
+                                    TextAlignment="Left"                                        
+                                    Text="{Binding Path=ForSigned}" 
+                                    Foreground="White"></TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="#ef7065"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Red"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+            </ListView.ItemContainerStyle>
+            </ListView>
+        </Grid>
 
-        <ListView 
-            Name="lvSigned"
-            ItemsSource="{Binding Items1}" Margin="343,152,355,10">
-            <ListView.View>
-                <GridView>
-                    <GridView.ColumnHeaderContainerStyle>
-                        <Style TargetType="GridViewColumnHeader">
-                            <Setter Property="Foreground" Value="#008080"></Setter>
-                            <Setter Property="FontWeight" Value="Bold"></Setter>
-                            <Setter Property="Width" Value="230"></Setter>
-                            <Setter Property="HorizontalAlignment" Value="Center"/>
-                        </Style>
-                    </GridView.ColumnHeaderContainerStyle>
-                    <!--<GridViewColumn                       
+        
+        <Grid
+            Margin="343,152,355,10"
+            Background="#b3cc3a">
+            <ListView 
+                Width="1000"
+                Name="lvSigned">
+                <ListView.View>
+                    <GridView>
+                        <GridView.ColumnHeaderContainerStyle>
+                            <Style TargetType="GridViewColumnHeader">
+                                <Setter Property="Foreground" Value="#008080"></Setter>
+                                <Setter Property="FontWeight" Value="Bold"></Setter>
+                                <Setter Property="Width" Value="230"></Setter>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                            </Style>
+                        </GridView.ColumnHeaderContainerStyle>
+                        <!--<GridViewColumn                       
                         DisplayMemberBinding="{Binding DocType}"
                         Header="Type" />-->
-                    <GridViewColumn                       
+                        <GridViewColumn                       
                        Width="230"                        
                        Header="SUBJECT">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock
-                                    Margin="8"
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
+                                    Padding="-1"
+                                    Margin="11"
                                     Height="30"
                                     TextWrapping="Wrap"                                 
                                     Width="220"        
                                     x:Name="txt"                                    
-                                    Text="{Binding Path=OperatingUnit}" 
-                                    Foreground="#000030">
-                                </TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn   
+                                    Text="{Binding Path=DocSubject}" 
+                                    Foreground="#EC4D37">
+                                    </TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn   
                         Width="150"                         
-                        Header="DATE          ">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock 
-                                    Margin="8"                               
-                                    Width="70"        
+                        Header="DATE                 ">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock 
+                                    Margin="11"                               
+                                    Width="100"        
                                     x:Name="txt"   
-                                    TextAlignment="Center"                                        
-                                    Text="{Binding Email}" 
-                                    Foreground="#000030"></TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>
+                                    TextWrapping="Wrap"
+                                    TextAlignment="Left"                                     
+                                    Text="{Binding Path=Signed}" 
+                                    Foreground="#EC4D37"></TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="#b3cc3a"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="White"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </Grid>
 
-        <ListView 
-            Name="lvForRelease"
-            ItemsSource="{Binding Items1}" Margin="688,152,10,10">
-            <ListView.View>
-                <GridView>
-                    <GridView.ColumnHeaderContainerStyle>
-                        <Style TargetType="GridViewColumnHeader">
-                            <Setter Property="Foreground" Value="#008080"></Setter>
-                            <Setter Property="FontWeight" Value="Bold"></Setter>
-                            <Setter Property="Width" Value="230"></Setter>
-                            <Setter Property="HorizontalAlignment" Value="Center"/>
-                        </Style>
-                    </GridView.ColumnHeaderContainerStyle>
-                    <!--<GridViewColumn                       
+
+        <Grid
+            Margin="688,152,10,10"
+            Background="#0a4054">
+            <ListView                                    
+                Width="1000"            
+                Name="lvForRelease">
+                <ListView.View>
+                    <GridView>
+                        <GridView.ColumnHeaderContainerStyle>
+                            <Style TargetType="GridViewColumnHeader">
+                                <Setter Property="Foreground" Value="#008080"></Setter>
+                                <Setter Property="FontWeight" Value="Bold"></Setter>
+                                <Setter Property="Width" Value="230"></Setter>
+                                <Setter Property="HorizontalAlignment" Value="Center"/>
+                            </Style>
+                        </GridView.ColumnHeaderContainerStyle>
+                        <!--<GridViewColumn                       
                         DisplayMemberBinding="{Binding DocType}"
                         Header="Type" />-->
-                    <GridViewColumn                       
+                        <GridViewColumn                       
                        Width="230"                        
                        Header="SUBJECT">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock
-                                    Margin="8"
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock
+                                    Padding="-1"
+                                    Margin="11"
                                     Height="30"
                                     TextWrapping="Wrap"                                 
                                     Width="220"        
                                     x:Name="txt"                                    
-                                    Text="{Binding Path=OperatingUnit}" 
-                                    Foreground="#EC4D37">
-                                </TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn   
+                                    Text="{Binding Path=DocSubject}" 
+                                    Foreground="White">
+                                    </TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                        <GridViewColumn   
                         Width="150"                         
-                        Header="DATE          ">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock 
-                                    Margin="8"                               
-                                    Width="70"        
+                        Header="DATE                 ">
+                            <GridViewColumn.CellTemplate>
+                                <DataTemplate>
+                                    <TextBlock 
+                                    Margin="11"                               
+                                    Width="100"        
                                     x:Name="txt"   
-                                    TextAlignment="Center"                                        
-                                    Text="{Binding Email}" 
-                                    Foreground="#EC4D37"></TextBlock>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>
+                                    TextWrapping="Wrap"
+                                    TextAlignment="Left"                                      
+                                    Text="{Binding Path=ForRelease}" 
+                                    Foreground="White"></TextBlock>
+                                </DataTemplate>
+                            </GridViewColumn.CellTemplate>
+                        </GridViewColumn>
+                    </GridView>
+                </ListView.View>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Style.Triggers>
+                            <Trigger Property="IsSelected" Value="True">
+                                <Setter Property="Background" Value="#0a4054"/>
+                            </Trigger>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Red"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+        </Grid>
+        
         
         
         <Button            
             x:Name="btnAdd"
             Click="buttonShowDialog"
-            Margin="968,769,10,31"
+            Margin="977,772,1,28"
             Style="{StaticResource MaterialDesignFloatingActionButton}"
             ToolTip="ADD NEW DOCUMENT">
             <materialDesign:PackIcon
