--- a/App.xaml
+++ b/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DocsControl"
              StartupUri="MainWindow.xaml">
+             <!--StartupUri="Dialogs\dAddEditDocs.xaml">-->
     <Application.Resources>
         <ResourceDictionary>
              <ResourceDictionary.MergedDictionaries>
