--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,7 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DocsControl"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"           
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:View="clr-namespace:DocsControl.View"
         mc:Ignorable="d"
         ResizeMode="NoResize"
         AllowsTransparency="True"
@@ -69,8 +69,7 @@
 
         <Label   
             HorizontalContentAlignment="Right"
-            Name="lblDateTime"
-            Cursor="Hand"
+            Name="lblDateTime"   
             FontWeight="Bold"
             Foreground="#EC4D37"            
             FontSize="14"
@@ -370,5 +369,9 @@
                 </TransformGroup>
             </StackPanel.RenderTransform>
         </StackPanel>
+
+    
+        
+        
     </Grid>
 </Window>
